@@ -1,4 +1,5 @@
 [CW40]
++ SyncProxyAndroid SDK: Extend ShowConstantTBT request object.
 + PerformInteraction dialog: add interactionLayout parameter.
 + SyncProxyAndroid SDK: Extend PerformInteraction request and response objects.
 
